package calcolatrice;

public interface Calcolatrice {
    String somma (double a, double b);
    String sottrazione (double a, double b);
    String moltiplicazione (double a, double b);
    String divisione (double a, double b);
}
